--- a/Counting_things_Yang.ipynb
+++ b/Counting_things_Yang.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "source": [
     "## Basic processing of the data file\n",
+    "#### Warning: part of this notebook modifies number of column and saves data to new data file. Avoid using the \"Run All\" option. Repeated running of some of these codes may create duplicate columns of \"genus\" and save that to the \"...._with_genus.csv\" file.\n",
+    "\n",
     "- count entries by scientific name\n",
     "- create new column that's just the genus\n",
     "    - if SN only has one word then keep it, otherwise take the first word  \n",
@@ -14,12 +16,13 @@
     "Summary: \n",
     "- some columns are entirely null, we will get rid of them at some point\n",
     "- by scientific name, there are 364 different species \n",
-    "- by genus name, there are 109 different genera. 13 of these have only one data point, 39 of these have less than 10"
+    "- by genus name, there are 109 different genera. 13 of these have only one data point, 39 of these have less than 10\n",
+    "- we will have problem doing cross validation with genera with only a few data points. We need to save some for test set and further split them for cross validation. It would be very imbalanced: some genera would have say 300 and some would have 1 point. This will make some stats "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "e9c62392",
    "metadata": {},
    "outputs": [],
@@ -29,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "37a8835a",
    "metadata": {},
    "outputs": [],
@@ -39,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "b8a50c37",
    "metadata": {},
    "outputs": [
@@ -49,60 +52,59 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 13461 entries, 0 to 13460\n",
-      "Data columns (total 49 columns):\n",
+      "Data columns (total 48 columns):\n",
       " #   Column                       Non-Null Count  Dtype  \n",
       "---  ------                       --------------  -----  \n",
       " 0   cat_num                      13461 non-null  float64\n",
       " 1   format                       13461 non-null  object \n",
       " 2   common_name                  11191 non-null  object \n",
-      " 3   genus                        13461 non-null  object \n",
-      " 4   scientific_name              13461 non-null  object \n",
-      " 5   background_species           128 non-null    object \n",
-      " 6   recordist                    13461 non-null  object \n",
-      " 7   date                         13437 non-null  object \n",
-      " 8   year                         13442 non-null  float64\n",
-      " 9   month                        13440 non-null  float64\n",
-      " 10  day                          13437 non-null  float64\n",
-      " 11  time                         8411 non-null   float64\n",
-      " 12  country                      13434 non-null  object \n",
-      " 13  country.state.county         13434 non-null  object \n",
-      " 14  state                        12321 non-null  object \n",
-      " 15  county                       10469 non-null  object \n",
-      " 16  locality                     11923 non-null  object \n",
-      " 17  latitude                     6028 non-null   float64\n",
-      " 18  longitude                    6028 non-null   float64\n",
-      " 19  age.sex                      11409 non-null  object \n",
-      " 20  behaviors                    5902 non-null   object \n",
-      " 21  playback                     13461 non-null  object \n",
-      " 22  captive                      5053 non-null   object \n",
-      " 23  collected                    9157 non-null   object \n",
-      " 24  specimen_id                  1640 non-null   object \n",
-      " 25  home_archive_catalog_number  5 non-null      object \n",
-      " 26  recorder                     13098 non-null  object \n",
-      " 27  microphone                   10933 non-null  object \n",
-      " 28  accessory                    1490 non-null   object \n",
-      " 29  partner_institution          9 non-null      object \n",
-      " 30  ebird_checklist_id           35 non-null     object \n",
-      " 31  unconfirmed                  0 non-null      float64\n",
-      " 32  air_temp..c.                 4100 non-null   float64\n",
-      " 33  water_temp..c.               1 non-null      float64\n",
-      " 34  media_notes                  12929 non-null  object \n",
-      " 35  observation_details          0 non-null      float64\n",
-      " 36  class                        0 non-null      float64\n",
-      " 37  order                        0 non-null      float64\n",
-      " 38  family                       0 non-null      float64\n",
-      " 39  parent_species               13461 non-null  object \n",
-      " 40  ebird_species_code           13461 non-null  object \n",
-      " 41  taxon_category               8822 non-null   object \n",
-      " 42  taxonomic_sort               10 non-null     float64\n",
-      " 43  recordist_2                  844 non-null    object \n",
-      " 44  average_community_rating     13461 non-null  float64\n",
-      " 45  number_of_ratings            13461 non-null  int64  \n",
-      " 46  asset_tags                   5053 non-null   object \n",
-      " 47  original_image_height        0 non-null      float64\n",
-      " 48  original_image_width         0 non-null      float64\n",
-      "dtypes: float64(18), int64(1), object(30)\n",
-      "memory usage: 5.0+ MB\n"
+      " 3   scientific_name              13461 non-null  object \n",
+      " 4   background_species           128 non-null    object \n",
+      " 5   recordist                    13461 non-null  object \n",
+      " 6   date                         13437 non-null  object \n",
+      " 7   year                         13442 non-null  float64\n",
+      " 8   month                        13440 non-null  float64\n",
+      " 9   day                          13437 non-null  float64\n",
+      " 10  time                         8411 non-null   float64\n",
+      " 11  country                      13434 non-null  object \n",
+      " 12  country.state.county         13434 non-null  object \n",
+      " 13  state                        12321 non-null  object \n",
+      " 14  county                       10469 non-null  object \n",
+      " 15  locality                     11923 non-null  object \n",
+      " 16  latitude                     6028 non-null   float64\n",
+      " 17  longitude                    6028 non-null   float64\n",
+      " 18  age.sex                      11409 non-null  object \n",
+      " 19  behaviors                    5902 non-null   object \n",
+      " 20  playback                     13461 non-null  object \n",
+      " 21  captive                      5053 non-null   object \n",
+      " 22  collected                    9157 non-null   object \n",
+      " 23  specimen_id                  1640 non-null   object \n",
+      " 24  home_archive_catalog_number  5 non-null      object \n",
+      " 25  recorder                     13098 non-null  object \n",
+      " 26  microphone                   10933 non-null  object \n",
+      " 27  accessory                    1490 non-null   object \n",
+      " 28  partner_institution          9 non-null      object \n",
+      " 29  ebird_checklist_id           35 non-null     object \n",
+      " 30  unconfirmed                  0 non-null      float64\n",
+      " 31  air_temp..c.                 4100 non-null   float64\n",
+      " 32  water_temp..c.               1 non-null      float64\n",
+      " 33  media_notes                  12929 non-null  object \n",
+      " 34  observation_details          0 non-null      float64\n",
+      " 35  class                        0 non-null      float64\n",
+      " 36  order                        0 non-null      float64\n",
+      " 37  family                       0 non-null      float64\n",
+      " 38  parent_species               13461 non-null  object \n",
+      " 39  ebird_species_code           13461 non-null  object \n",
+      " 40  taxon_category               8822 non-null   object \n",
+      " 41  taxonomic_sort               10 non-null     float64\n",
+      " 42  recordist_2                  844 non-null    object \n",
+      " 43  average_community_rating     13461 non-null  float64\n",
+      " 44  number_of_ratings            13461 non-null  int64  \n",
+      " 45  asset_tags                   5053 non-null   object \n",
+      " 46  original_image_height        0 non-null      float64\n",
+      " 47  original_image_width         0 non-null      float64\n",
+      "dtypes: float64(18), int64(1), object(29)\n",
+      "memory usage: 4.9+ MB\n"
      ]
     }
    ],
@@ -117,8 +119,7 @@
    "metadata": {},
    "source": [
     "# vvv\n",
-    "The block below adds genus column and changes order of colums and saves the dataframe to file.\n",
-    "Note that the cells that are NA in the original file are now just empty cells. "
+    "### The block below adds genus column and changes order of colums and saves the dataframe to file. Note that the cells that are NA in the original file are now just empty cells. "
    ]
   },
   {
@@ -144,15 +145,49 @@
    "metadata": {},
    "source": [
     "# vvv\n",
-    "Counting stuff"
+    "Counting stuff\n",
+    "<br> Re-read the file so one can run the following code without adding extra genus columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "61b3d202",
+   "execution_count": 9,
+   "id": "3707a8d6",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df = pd.read_csv('MLSN_Insects_with_genus.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "61b3d202",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "scientific_name\n",
+       "Gryllus campestris              1\n",
+       "Pictonemobius                   1\n",
+       "Amphiacusta annulipes           1\n",
+       "Gryllotalpa                     1\n",
+       "Petaloptera                     1\n",
+       "                             ... \n",
+       "Gryllus pennsylvanicus        280\n",
+       "Oecanthus quadripunctatus     301\n",
+       "Gryllus rubens                371\n",
+       "Anaxipha                      419\n",
+       "Gryllus                      2986\n",
+       "Name: cat_num, Length: 364, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# counts data points grouped by scientific name\n",
     "name_counts = df.groupby('scientific_name').cat_num.count()\n",
@@ -161,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "8a551fee",
    "metadata": {},
    "outputs": [
@@ -183,7 +218,7 @@
        "Name: cat_num, Length: 109, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
