--- a/Counting_things_Yang.ipynb
+++ b/Counting_things_Yang.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e9c62392",
    "metadata": {},
    "outputs": [],
@@ -294,8 +294,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f6c4fb53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fam_or_subfam\n",
+       "Acrididae             17\n",
+       "Cicadidae            269\n",
+       "Conocephalinae      1489\n",
+       "Eneopterinae          51\n",
+       "Gryllacrididae         1\n",
+       "Gryllinae           4965\n",
+       "Gryllotalpidae       203\n",
+       "Hapithinae           643\n",
+       "Listroscelidinae      19\n",
+       "Mogoplistinae        758\n",
+       "Nemobiinae           792\n",
+       "Oecanthinae         1230\n",
+       "Phalangopsidae        19\n",
+       "Phaneropterinae     1063\n",
+       "Pseudophyllinae      271\n",
+       "Tettigoniinae        575\n",
+       "Trigonidiinae        879\n",
+       "Name: cat_num, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"MLNS_Insects_Fams.csv\")\n",
+    "df.groupby('fam_or_subfam').cat_num.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2578646e",
    "metadata": {},
    "outputs": [],
    "source": []
