--- a/Harma.ipynb
+++ b/Harma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +68,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Harma(D, search_width=1):\n",
+    "        Dc = D.copy()\n",
+    "        max_amp = np.max(D)\n",
+    "    \n",
+    "        freq_plots = []\n",
+    "        amp_plots = []\n",
+    "    \n",
+    "        threshold_amp = (np.max(D) - np.min(D)) * .35\n",
+    "    \n",
+    "        while np.max(Dc) >= max_amp - threshold_amp:\n",
+    "            freq_plot, amp_plot, time_start, time_end = onestep_Harma(Dc, search_width=search_width)\n",
+    "            freq_plots.append(freq_plot)\n",
+    "            amp_plots.append(amp_plot)\n",
+    "            Dc[:, time_start : time_end ] = 0.0\n",
+    "        \n",
+    "        return freq_plots, amp_plots, Dc"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +121,7 @@
        "        7.2534377e-08, 4.2204075e-08]], dtype=float32)"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
