Added Columns to Metadata
Mostly cleaning up. I added columns to the metadata to indicate if the associated files had been snipped and if the file contained an insect that was IDed to the species level. All old Metadata files are now stored in the Metadata_Old folder.

--- a/Accessing_Wavs.ipynb
+++ b/Accessing_Wavs.ipynb
@@ -8,7 +8,7 @@
     "# Accessing Wav Files on Amazon Web Service\n",
     "### There are two buckets:\n",
     "- chirpcheckerbucket - has all of the .wav files\n",
-    "- chirpcheckerbucket2 - empty at the moment, ready to be filled\n",
+    "- chirpcheckerbucket2 - has all of the snipped .wav files (talking removed and trimmed to 20s)\n",
     "\n",
     "### Credentials:\n",
     "- config.json (github folder)"
@@ -101,7 +101,7 @@
    "source": [
     "#get file names that are on AWS S3\n",
     "#buckets kind of confuse me, but you can't just list all of the objects in a bucket. \n",
-    "#This is because there may be a TON of files a bucket and it could potentially eat up RAM to get that info\n",
+    "#This is because there may be a TON of files in a bucket and it could potentially eat up RAM to get that info\n",
     "\n",
     "session = boto3.Session(aws_access_key_id=aws_access_key_id, aws_secret_access_key=aws_secret_access_key)\n",
     "\n",
