--- a/adding_fam_or_subfam.ipynb
+++ b/adding_fam_or_subfam.ipynb
@@ -18,7 +18,7 @@
    "id": "6bb0d072-0fc6-4378-b420-f0024c80b205",
    "metadata": {},
    "source": [
-    "### VVV import checklists of insects from various families / subfamilies and merge"
+    "### import checklists of insects from various families / subfamilies and merge"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as nm\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
@@ -65,7 +65,7 @@
    "id": "197f79fe-a2ff-4d1a-9a12-19bc14471ba7",
    "metadata": {},
    "source": [
-    "### VVV Make the scientific name column the same for both datasets and merge"
+    "### Make the scientific name column the same for both datasets and merge"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "id": "0ca76825-a8b7-4c34-b312-6c6338e3f626",
    "metadata": {},
    "source": [
-    "### VVV Clear up nans (rows without an assigned family or subfamily)"
+    "### Clear up nans (rows without an assigned family or subfamily)"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "id": "50545a12-f908-4a35-b1e5-b00d8196f3cf",
    "metadata": {},
    "source": [
-    "### VVV Check for nans"
+    "### Check for nans"
    ]
   },
   {
@@ -219,7 +219,7 @@
    "id": "3a573f5a-1ee9-4df6-a9c9-b0e73b14a7ca",
    "metadata": {},
    "source": [
-    "### VVV Write the CSV"
+    "### Write the CSV"
    ]
   },
   {
@@ -231,6 +231,154 @@
    "source": [
     "# write csv\n",
     "merged_df.to_csv('MLNS_Insects_Fams.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d86bbb07-1171-4412-bf35-fdcdb6a0fc58",
+   "metadata": {},
+   "source": [
+    "### Add column for cricket, cicada, katydid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "5552926b-db3f-48d0-9d0b-1b0201964d6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat_num</th>\n",
+       "      <th>format</th>\n",
+       "      <th>common_name</th>\n",
+       "      <th>fam_or_subfam</th>\n",
+       "      <th>genus</th>\n",
+       "      <th>scientific_name</th>\n",
+       "      <th>background_species</th>\n",
+       "      <th>recordist</th>\n",
+       "      <th>date</th>\n",
+       "      <th>year</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ebird_species_code</th>\n",
+       "      <th>taxon_category</th>\n",
+       "      <th>taxonomic_sort</th>\n",
+       "      <th>recordist_2</th>\n",
+       "      <th>average_community_rating</th>\n",
+       "      <th>number_of_ratings</th>\n",
+       "      <th>asset_tags</th>\n",
+       "      <th>original_image_height</th>\n",
+       "      <th>original_image_width</th>\n",
+       "      <th>critter_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 51 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [cat_num, format, common_name, fam_or_subfam, genus, scientific_name, background_species, recordist, date, year, month, day, time, country, country.state.county, state, county, locality, latitude, longitude, age.sex, behaviors, playback, captive, collected, specimen_id, home_archive_catalog_number, recorder, microphone, accessory, partner_institution, ebird_checklist_id, unconfirmed, air_temp..c., water_temp..c., media_notes, observation_details, class, order, family, parent_species, ebird_species_code, taxon_category, taxonomic_sort, recordist_2, average_community_rating, number_of_ratings, asset_tags, original_image_height, original_image_width, critter_name]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 51 columns]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chirps = pd.read_csv('MLNS_Insects_Fams.csv')\n",
+    "\n",
+    "katydids = ['Conocephalinae', 'Meconematinae', 'Phaneropterinae', 'Saginae', 'Pseudophyllinae', 'Tettigoniinae', 'Tettigoniidae']\n",
+    "crickets = ['Gryllacrididae','Listroscelidinae','Phalangopsidae', 'Eneopterinae', 'Hapithinae', 'Gryllinae','Gryllotalpidae', 'Mogoplistinae', 'Myrmecophilinae', 'Nemobiinae', 'Oecanthinae', 'Prophalangopsidae', 'Trigonidiinae', ]\n",
+    "cicadas = ['Cicadidae']\n",
+    "grasshoppers = ['Acrididae']\n",
+    "\n",
+    "chirps.loc[np.isin(chirps['fam_or_subfam'],katydids),'critter_name'] = \"kaydid\"\n",
+    "chirps.loc[np.isin(chirps['fam_or_subfam'],crickets),'critter_name'] = \"cricket\"\n",
+    "chirps.loc[np.isin(chirps['fam_or_subfam'],cicadas),'critter_name'] = \"cicada\"\n",
+    "chirps.loc[np.isin(chirps['fam_or_subfam'],grasshoppers),'critter_name'] = \"grasshopper\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79902aa9-7dfa-4080-936d-93d055000e98",
+   "metadata": {},
+   "source": [
+    "### Make a column to indicate if the recording is to the species level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "836a19ff-46dc-4748-afdc-6c75c26e9f3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chirps['species_id'] = chirps['scientific_name'].apply(lambda x: len(x.split())) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0246dc3e-9db2-4556-9831-29ea6874f84b",
+   "metadata": {},
+   "source": [
+    "### Make a column to indicate if the recording was snipped (talking removed and cut to 20 s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "0d39b1be-5b0f-4da2-8274-cb9793a8af73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '..//..//../!Research//Erdos//Recordings//MLNS_Snipped//'\n",
+    "wavs = os.listdir(path)\n",
+    "all_insects = [str(file) + \".wav\" for file in chirps['cat_num']]\n",
+    "chirps['snipped'] = np.isin(all_insects, wavs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0aa74cc-7677-4bdb-ab27-e02aaed7d809",
+   "metadata": {},
+   "source": [
+    "### Remake csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "5e14fc8f-1c4d-4c69-bccd-702ff85f4c94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chirps.to_csv('MLNS_Insects_Fams_05212024.csv', index=False)"
    ]
   }
  ],
