--- a/Counting_things_Yang.ipynb
+++ b/Counting_things_Yang.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e9c62392",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "b8a50c37",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -163,7 +165,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "61b3d202",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -198,7 +202,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "8a551fee",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -233,7 +239,9 @@
    "cell_type": "code",
    "execution_count": 59,
    "id": "c362efd6",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -296,7 +304,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "f6c4fb53",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -333,9 +343,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8be21174",
+   "metadata": {},
+   "source": [
+    "# vvv\n",
+    "Collect files that have no human voice (list created by robert)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e679799c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_voice_list = pd.read_csv('no_voice_files.csv', header=None)\n",
+    "filename_list = [name.split(\"\\\\\")[-1] for name in no_voice_list[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "bd12e8bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os,shutil\n",
+    "big_folder = 'E:\\chirpfiles\\\\actual_chirp_files\\\\'\n",
+    "new_folder = 'E:\\chirpfiles\\\\no_voice_files\\\\'\n",
+    "\n",
+    "for name in filename_list:\n",
+    "    scr = big_folder + name\n",
+    "    des = new_folder + name\n",
+    "    shutil.copy(scr, des)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2578646e",
+   "id": "f997c228",
    "metadata": {},
    "outputs": [],
    "source": []
