Added division conversion function for converting list of labels

--- a/CNN_experiment_Yang.ipynb
+++ b/CNN_experiment_Yang.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2b92115a",
    "metadata": {},
    "outputs": [],
@@ -70,13 +70,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "0a7fd9e0",
+   "execution_count": 67,
+   "id": "c838ffb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"from_division = 'fam_or_subfam'\\nto_division = 'critter_name'\\nmeta_file = 'MLNS_Insects_Fams_05212024.csv'\\nlabels = ['Acrididae', 'Cicadidae', 'Acrididae', 'Listroscelidinae', \\n                  'Mogoplistinae', 'Nemobiinae', 'Oecanthinae', 'Phalangopsidae',\\n                  'Phaneropterinae', 'Oecanthinae', 'Tettigoniinae','Trigonidiinae']    \\nconvert_labels(labels, meta_file, from_division, to_division)\""
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# for converting strings of label from one division to another, e.g. fam/subfam to critter name\n",
-    "def convert_labels(meta_file, from_label, to_label)\n"
+    "def convert_labels(labels, meta_file, from_division, to_division):\n",
+    "    # find label in labels in meta_file under column from_division\n",
+    "    # append as key in dictionary lookup_table\n",
+    "    # append as value the correspondign label in to_division\n",
+    "\n",
+    "    df = pd.read_csv(meta_file, usecols=[from_division, to_divison])\n",
+    "    lookup_table = dict() # look up table for new label\n",
+    "    for label in labels:\n",
+    "        if label in lookup_table.keys():\n",
+    "            continue\n",
+    "        idx = df.loc[df[from_division]==label].index[0]\n",
+    "        lookup_table[label] = df[to_divison][idx]\n",
+    "    return [lookup_table[label] for label in labels]\n",
+    "\n",
+    "# example testing block\n",
+    "# from_division = 'fam_or_subfam'\n",
+    "#to_division = 'critter_name'\n",
+    "##meta_file = 'MLNS_Insects_Fams_05212024.csv'\n",
+    "#labels = ['Acrididae', 'Cicadidae', 'Acrididae', 'Listroscelidinae', \n",
+    "#                  'Mogoplistinae', 'Nemobiinae', 'Oecanthinae', 'Phalangopsidae',\n",
+    "#                  'Phaneropterinae', 'Oecanthinae', 'Tettigoniinae','Trigonidiinae']    \n",
+    "#convert_labels(labels, meta_file, from_division, to_division)"
    ]
   },
   {
