--- a/Harma.ipynb
+++ b/Harma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,8 @@
     "    \n",
     "        freq_plots = []\n",
     "        amp_plots = []\n",
+    "        start_times = []\n",
+    "        end_times = []\n",
     "    \n",
     "        threshold_amp = (np.max(D) - np.min(D)) * .35\n",
     "    \n",
@@ -86,6 +88,8 @@
     "            freq_plot, amp_plot, time_start, time_end = onestep_Harma(Dc, search_width=search_width)\n",
     "            freq_plots.append(freq_plot)\n",
     "            amp_plots.append(amp_plot)\n",
+    "            start_times.append(time_start)\n",
+    "            end_times.append(time_end)\n",
     "            Dc[:, time_start : time_end ] = 0.0\n",
     "        \n",
     "        return freq_plots, amp_plots, Dc"
@@ -100,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +125,7 @@
        "        7.2534377e-08, 4.2204075e-08]], dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
