--- a/Harma.ipynb
+++ b/Harma.ipynb
@@ -92,7 +92,7 @@
     "            end_times.append(time_end)\n",
     "            Dc[:, time_start : time_end ] = 0.0\n",
     "        \n",
-    "        return freq_plots, amp_plots, Dc"
+    "        return freq_plots, amp_plots, Dc, start_times, end_times"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
