--- a/FeedingData.ipynb
+++ b/FeedingData.ipynb
@@ -183,6 +183,42 @@
     "        DBmel[x, :] = DBmel[x, :]-med\n",
     "    return librosa.feature.mfcc(S=DBmel, n_mfcc = n)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eee6b5bf-ab5e-49a8-a381-0de7957e57f4",
+   "metadata": {},
+   "source": [
+    "Function 7: Main Frequency via variance and mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0744bf4-400a-4395-a38b-2089cb4b7c91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main_freq(song, cutoff = 800):\n",
+    "    D = np.abs(librosa.stft(song))\n",
+    "    cut = int(float(cutoff)/(librosa.fft_frequencies()[1]))\n",
+    "    D = D[cut:]\n",
+    "    DB = librosa.amplitude_to_db(D, ref=np.max)\n",
+    "    maxmean = np.mean(DB[0,:])\n",
+    "    main_meanfreq = 0\n",
+    "    maxvar = np.var(DB[0,:])\n",
+    "    main_varfreq = 0\n",
+    "    for x in range(1,DB.shape[0]):\n",
+    "        mean = np.mean(DB[x,:])\n",
+    "        var = np.var(DB[x,:])\n",
+    "        if mean > maxmean:\n",
+    "            maxmean = mean\n",
+    "            main_meanfreq = x\n",
+    "        if var > maxvar:\n",
+    "            maxvar = var\n",
+    "            main_varfreq = x\n",
+    "    return main_varfreq * librosa.fft_frequencies()[1], main_meanfreq * librosa.fft_frequencies()[1]"
+   ]
   }
  ],
  "metadata": {
