--- a/FeedingData.ipynb
+++ b/FeedingData.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bd6932a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "630362cf-ba6a-45e2-9107-35842ae09143",
    "metadata": {},
@@ -42,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mfcc_cut(song, n=20, cutoff = 800:\n",
+    "def mfcc_cut(song, n=20, cutoff = 800):\n",
     "    #remove bottom 800 hz of frequencies\n",
     "    return librosa.feature.mfcc(y = song, f_min = cutoff, n_mfcc = n)"
    ]
@@ -62,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def LFCC(song, n=20):\n",
+    "def LFCC(song, n=20, n_fft=2048, hop_length=512):\n",
     "    D = np.abs(librosa.stft(song, n_fft=n_fft,  hop_length=hop_length))\n",
     "    DB = librosa.amplitude_to_db(D, ref=np.max)\n",
     "    \n",
@@ -97,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def LFCC_no_low(song, n=20, cutoff = 800):\n",
+    "def LFCC_no_low(song, n=20, cutoff = 800, n_fft=2048, hop_length=512):\n",
     "    D = np.abs(librosa.stft(song, n_fft=n_fft,  hop_length=hop_length))\n",
     "    cut = int(float(cutoff)/(librosa.fft_frequencies()[1]))\n",
     "    D = D[cut:]\n",
@@ -135,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def LFCC_no_low_clean(song, n=20, cutoff = 800):\n",
+    "def LFCC_no_low_clean(song, n=20, cutoff = 800, n_fft=2048, hop_length=512):\n",
     "    D = np.abs(librosa.stft(song, n_fft=n_fft,  hop_length=hop_length))\n",
     "    cut = int(float(cutoff)/(librosa.fft_frequencies()[1]))\n",
     "    D = D[cut:]\n",
@@ -175,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mfcc_cut_cleaned(song, n=20, cutoff = 800):\n",
+    "def mfcc_cut_cleaned(song, n=20, cutoff = 800, n_fft=2048, hop_length=512):\n",
     "    Dmel = librosa.feature.melspectrogram(y=song, fmin = cutoff, n_fft=n_fft,  hop_length=hop_length)\n",
     "    DBmel=librosa.power_to_db(Dmel)\n",
     "    for x in range(0,DBmel.shape[0]):\n",
@@ -237,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
