--- a/MFCC_average_and_variance.ipynb
+++ b/MFCC_average_and_variance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "98636711-1781-4893-aeb9-4687776cf29d",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "a9f1ec8b-413e-40fa-9389-90e56464781e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "79b09b32-1121-4c7e-b5d1-a73cfd884016",
    "metadata": {},
    "outputs": [],
@@ -41,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "id": "e6b5066b-1715-4f26-8e96-e549bfa7ee32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#This creates the new CSV with mfcc coefficients. Ignores files with length < .5 seconds. No need to run since the csv is now in the git!\n",
+    "#This creates the new CSV with mfcc coefficients and f_min cuttoff = 800. Ignores files with length < .5 seconds. No need to run since the csv is now in the git!\n",
     "ct = 0\n",
     "n= 40\n",
     "for name in filename_list:\n",
@@ -54,7 +54,7 @@
     "    file_path = '../../../chirp/'+name\n",
     "    song, sr = librosa.load(file_path)\n",
     "    if song.shape[0] > sr/2:\n",
-    "        lib = librosa.feature.mfcc(y=song, sr=sr, n_mfcc=n)\n",
+    "        lib = librosa.feature.mfcc(y=song, sr=sr, fmin = 800, n_mfcc=n)\n",
     "        for i in range(0,n):\n",
     "            df.at[df.loc[df['cat_num']==int(name[:-4])].index[0], 'mfcc_'+str(i)+'_avg'] = lib[i].mean()\n",
     "            df.at[df.loc[df['cat_num']==int(name[:-4])].index[0], 'mfcc_'+str(i)+'_var'] = lib[i].var()\n",
@@ -62,7 +62,7 @@
     "           # df['mfcc_'+str(i)+'_var']=lib[i].var()\n",
     "        ct+=1\n",
     "        if ct % 100 == 0:\n",
-    "            df.to_csv(\"MLNS_with_mfcc_stats_05232024.csv\")"
+    "            df.to_csv(\"MLNS_with_mfcc_stats_800_cutoff_05272024.csv\")"
    ]
   },
   {
