--- a/MainFrequency_CopyForRobert.ipynb
+++ b/MainFrequency_CopyForRobert.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "378d855c-84fb-49e2-bdb4-3f7ea7119dce",
    "metadata": {},
    "outputs": [],
@@ -137,12 +137,32 @@
     "        if var > maxvar:\n",
     "            maxvar = var\n",
     "            maxfreq = x\n",
-    "    return maxfreq * librosa.fft_frequencies()[1],backfreq * librosa.fft_frequencies()[1]"
+    "    return maxfreq * librosa.fft_frequencies()[1],backfreq * librosa.fft_frequencies()[1]\n",
+    "\n",
+    "def main_freq(song, cutoff = 800):\n",
+    "    D = np.abs(librosa.stft(song))\n",
+    "    cut = int(float(cutoff)/(librosa.fft_frequencies()[1]))\n",
+    "    D = D[cut:]\n",
+    "    DB = librosa.amplitude_to_db(D, ref=np.max)\n",
+    "    maxmean = np.mean(DB[0,:])\n",
+    "    main_meanfreq = 0\n",
+    "    maxvar = np.var(DB[0,:])\n",
+    "    main_varfreq = 0\n",
+    "    for x in range(1,DB.shape[0]):\n",
+    "        mean = np.mean(DB[x,:])\n",
+    "        var = np.var(DB[x,:])\n",
+    "        if mean > maxmean:\n",
+    "            maxmean = mean\n",
+    "            main_meanfreq = x\n",
+    "        if var > maxvar:\n",
+    "            maxvar = var\n",
+    "            main_varfreq = x\n",
+    "    return main_varfreq * librosa.fft_frequencies()[1], main_meanfreq * librosa.fft_frequencies()[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "39e5b66d-a945-41ff-ac8c-e3d208c7ac00",
    "metadata": {},
    "outputs": [],
@@ -154,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "2c7f5214-7c80-4cc0-9748-d73c102eaf6d",
    "metadata": {},
    "outputs": [],
@@ -164,16 +184,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "96eb1d18-83d2-4e08-9998-5779e47cb9c7",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/erdos_may_2024/lib/python3.11/site-packages/librosa/core/spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=512\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/erdos_may_2024/lib/python3.11/site-packages/librosa/core/spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=1250\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/erdos_may_2024/lib/python3.11/site-packages/librosa/core/spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=1680\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/erdos_may_2024/lib/python3.11/site-packages/librosa/core/spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=1814\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/erdos_may_2024/lib/python3.11/site-packages/librosa/core/spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=1208\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/erdos_may_2024/lib/python3.11/site-packages/librosa/core/spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=1293\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Did 100\n",
-      "Did 200\n",
+      "Did 200\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/erdos_may_2024/lib/python3.11/site-packages/librosa/core/spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=1024\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/erdos_may_2024/lib/python3.11/site-packages/librosa/core/spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=1536\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Did 300\n",
       "Did 400\n",
       "Did 500\n",
@@ -306,9 +360,12 @@
     "   # if True song.shape[0] > sr/2:\n",
     "    if True:\n",
     "        tester = main_freq_and_range(file_path, remove_talk=False, sound_range = .5)\n",
+    "        song, sr = librosa.load(file_path)\n",
+    "        tester1 = main_freq(song)\n",
     "        ct+=1\n",
     "        df.at[df.loc[df['cat_num']==int(name[:-4])].index[0], 'main_freq'] = tester[0]\n",
     "        df.at[df.loc[df['cat_num']==int(name[:-4])].index[0], 'range'] = tester[1]\n",
+    "        df.at[df.loc[df['cat_num']==int(name[:-4])].index[0], 'max_mean'] = tester1[1]\n",
     "        ct+=1\n",
     "        if ct % 100 == 0:\n",
     "            df.to_csv(\"MLNS_with_main_freq_and_range_05272024.csv\")\n",
