knn with Calvin's frequencies

--- a/MFCC_avg_var_FFNN.ipynb
+++ b/MFCC_avg_var_FFNN.ipynb
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 199,
    "id": "b73c06f2-efcf-45dd-9cf4-334d4e03e147",
    "metadata": {},
    "outputs": [],
@@ -1592,12 +1592,14 @@
     "## but you can also use accuracy_score from sklearn\n",
     "## https://scikit-learn.org/stable/modules/generated/sklearn.metrics.accuracy_score.html\n",
     "def accuracy(true, predicted):\n",
-    "    return np.sum(true==predicted)/len(predicted)"
+    "    return np.sum(true==predicted)/len(predicted)\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 200,
    "id": "00cd7373-e501-4ee7-9364-f59caab317d8",
    "metadata": {},
    "outputs": [
@@ -1657,7 +1659,8 @@
     "        knn_pipe = Pipeline([('scale', StandardScaler()), ('knn', KNeighborsClassifier(k))])\n",
     "        knn_pipe.fit(X_train, y_train)\n",
     "        pred = knn_pipe.predict(X_test)\n",
-    "        print(f\"Test Accuracy when mfcc depth = {depth} and k = {k}: {accuracy(y_test, pred)}\")"
+    "        score = accuracy_score(y_test,pred)\n",
+    "        print(f\"Test Accuracy when mfcc depth = {depth} and k = {k}: {score}\")"
    ]
   },
   {
