--- a/FeedingData.ipynb
+++ b/FeedingData.ipynb
@@ -199,7 +199,7 @@
    "id": "eee6b5bf-ab5e-49a8-a381-0de7957e57f4",
    "metadata": {},
    "source": [
-    "Function 7: Main Frequency via variance and mean"
+    "### Function 7: Main Frequency via variance and mean"
    ]
   },
   {
@@ -229,6 +229,39 @@
     "            main_varfreq = x\n",
     "    return main_varfreq * librosa.fft_frequencies()[1], main_meanfreq * librosa.fft_frequencies()[1]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fffbc3a-fe38-411d-ad44-258af26b66b2",
+   "metadata": {},
+   "source": [
+    "### Function to pull the avg and var mfccs from the loudest half second of the recroding\n",
+    "song = librosa-loaded song,\n",
+    "sr = sampling rate from song,\n",
+    "n = number of mfccs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f26124f8-21be-4623-bd1f-0b03eb96e352",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_hs_avg_var_mfccs(song, sr, n = 40, cutoff = 800):\n",
+    "    max_ampj = np.argmax(abs(song))\n",
+    "    time_start, time_stop = round(max_ampj - sr/4), round(max_ampj + sr/4)\n",
+    "    if time_start < 0:\n",
+    "        time_start, time_stop = 0, round(sr/2)\n",
+    "    if time_stop > len(song):\n",
+    "        time_start, time_stop = len(song) - round(sr/2), len(song)\n",
+    "    mfccs = librosa.feature.mfcc(y = song[time_start:time_stop], fmin = cutoff, n_mfcc = n)\n",
+    "    mfcc_avg = np.mean(mfccs, axis = 1)\n",
+    "    mfcc_var = np.var(mfccs, axis = 1)\n",
+    "    if time_start < 0: return (np.full(20, np.nan), np.full(20, np.nan))\n",
+    "    else: \n",
+    "        return (mfcc_avg, mfcc_var)\n"
+   ]
   }
  ],
  "metadata": {
@@ -247,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
