--- a/FeedingData.ipynb
+++ b/FeedingData.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy"
+    "import scipy\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -262,6 +263,52 @@
     "    else: \n",
     "        return (mfcc_avg, mfcc_var)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1368a430-2a47-4639-8e04-d4d860e59b43",
+   "metadata": {},
+   "source": [
+    "### Function to get periods. Returns an array of length 36 where the i-th entry being large says that probably has some periodic feature with between 10i and 11i periods per minute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39b5e89e-718b-43e0-a037-14d0076c1f60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_periods(song, cutoff = 800):\n",
+    "    D = np.abs(librosa.stft(song, n_fft=n_fft,  hop_length=hop_length))\n",
+    "    cut = int(float(cutoff)/(librosa.fft_frequencies()[1]))\n",
+    "    D = D[cut:]\n",
+    "\n",
+    "    #perform fft on the volume of the noise\n",
+    "    data = D.sum(axis=0)\n",
+    "    time =  D.shape[1]\n",
+    "    halftime = int(time/2)\n",
+    "    data2 = data- data.mean()\n",
+    "    fft = np.absolute(scipy.fft.fft(data2))\n",
+    "    fft2 = fft[2:halftime]\n",
+    "    scaler = StandardScaler()\n",
+    "    scaled_fft = scaler.fit_transform((fft2.T).reshape(-1,1))\n",
+    "\n",
+    "    #bucket together close by periods to make data smaller. I'm kinda arbitrarily squaring to make more prevalent periods noticed\n",
+    "    buckets = np.zeros((36))\n",
+    "    counter = np.zeros((36))\n",
+    "    mini = min(data.shape[0],int(3*time/10 -3))\n",
+    "    for i in range(0,mini):\n",
+    "        bucket_num = int((i+2)/time*20*60/10)\n",
+    "        if data[i]>0:\n",
+    "            buckets[bucket_num] = buckets[bucket_num] + np.square(data[i])\n",
+    "        counter[bucket_num] = counter[bucket_num]+1\n",
+    "    for j in range(0,36):\n",
+    "        if buckets[j]>0:\n",
+    "            buckets[j] = buckets[j]/counter[j]\n",
+    "\n",
+    "    return buckets"
+   ]
   }
  ],
  "metadata": {
@@ -280,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
